--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 VITE_BACKEND_URL=http://localhost:8000 
 
 
-GOOGLE_API_KEY=AIzaSyBUHJ-T1NayE2K0IHA8j9YXEWgsTnfR_24
+GOOGLE_API_KEY=
 GEMINI_API_ENDPOINT=https://generativelanguage.googleapis.com/v1beta/models
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=Guerou@971
-DB_NAME=oilgas_rca
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-GNEWS_API_KEY=0f2013fbe4febf7ea4e10cfe1ae0e743
+GNEWS_API_KEY=
 
 
 
